--- a/cartwall.html
+++ b/cartwall.html
@@ -28,12 +28,12 @@
 
 </head>
 
-<body class="bg-dark text-muted">
+<body class="bg-dark text-muted mx-3">
 
   <!-- Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid mx-3">
+      <div class="container-fluid">
         <a class="navbar-brand d-none d-sm-block" href="index.html">
           <img src="images/logo.svg" alt="logo" height="24" class="d-inline-block align-text-top">
         </a>
