--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 </head>
 
-<body class="bg-dark text-muted">
+<body class="bg-dark text-muted mx-3">
 
   <div class="container-flex d-flex flex-column min-vh-100">
 
     <!-- Navigation -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid mx-3">
+        <div class="container-fluid">
           <a class="navbar-brand d-none d-sm-block" href="index.html">
             <img src="images/logo.svg" alt="logo" height="24" class="d-inline-block align-text-top">
           </a>
