--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Hero Section -->
     <div class="container my-auto pb-5 justify-content-center text-center">
       <div class="block">
-        <img src="images/avatar.png" class="img-fluid rounded-circle border border-teal avatar" alt="avatar">
+        <img src="images/avatar.jpg" class="img-fluid rounded-circle border border-teal avatar" alt="avatar">
       </div>
       <div class="my-3 pb-5">
         <img src="images/logo.svg" class="img-fluid headline mb-2" alt="avatar">
