--- a/stuff.html
+++ b/stuff.html
@@ -13,15 +13,8 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/main.css">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#BF1D90">
-  <meta name="msapplication-TileColor" content="#212529">
-  <meta name="theme-color" content="#212529">
-
-
+  <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg">
+  <link rel="icon" type="image/png" href="images/favicon/favicon.png">
 
   <title>Spangoss - Stuff</title>
 </head>
